--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,20 @@ body {
   font-family: sans-serif;
 }
 
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 100;
+  min-width: 100%;
+  min-height: 80%;
+}
+
+.welcome {
+  padding-top: 20px;
+  text-align: center;
+  top:450px;
+}
+
 h1 {
   color:  #050505;
   /* text-shadow: -3px 0 white, 0 3px white, 3px 0 white, 0 -3px white; */
