--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,15 @@ body {
   min-height: 80%;
 }
 
+.video-content {
+  position: fixed;
+  bottom: 0;
+  /* background: rgba(0, 0, 0, 0.116); */
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
 .welcome {
   padding-top: 20px;
   text-align: center;
