--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .header {
-  background-color: #dacbe0;
+  background-color: #e6dede;
   padding-top: 2px;
   padding-bottom: 3px;
   text-align: center;
@@ -53,7 +53,7 @@ p {
 body {
   text-align: center;
   color: rgb(10, 10, 10);
-  background-color: rgb(226, 226, 241);
+  background-color: rgb(255, 255, 255);
   font-family: sans-serif;
 }
 
@@ -72,6 +72,13 @@ body {
   color: #f1f1f1;
   width: 100%;
   padding: 20px;
+}
+
+.about {
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  margin-top: 250px;
 }
 
 .welcome {
@@ -101,15 +108,26 @@ h1 {
 }
 
 .container img {
-  width: 280px;
-  height: 280px;
+  width: 300px;
+  height: 350px;
+}
+
+.container {
+  display: grid;
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  margin-top: 170px;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  justify-content: space-around;
 }
 
 .show img {
-  width: 350px;
-  height: 300px;
-  /* width: 100%; */
-  /* object-fit: cover; */
+  width: 400px;
+  height: 450px;
+  /* width: 100%;
+  object-fit: cover; */
 }
 
 input {
