--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -51,8 +51,30 @@ li a:hover {
   background-color: #e9b4b478;
 }
 
-button:hover {
+/* img:hover {
   background-color: #e9b4b478;
+} */
+
+.social img {
+  /* padding: 50px; */
+  /* background-color: green; */
+  transition: transform .2s;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
 }
+
+.social img:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
+
+.social img {
+  width: 50px;
+  height: 40px;
+}
+
+
 
 
