--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -51,9 +51,9 @@ li a:hover {
   background-color: #e9b4b478;
 }
 
-/* img:hover {
+button:hover {
   background-color: #e9b4b478;
-} */
+}
 
 .social img {
   /* padding: 50px; */
