--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,9 @@ h1 {
 }
 
 .container img {
+object-fit: contain;
+/* height: 100px;
+width: 500px; */
   width: 300px;
   height: 390px;
 }
@@ -146,6 +149,7 @@ h1 {
 }
 
 .show img {
+  object-fit: contain;
   width: 300px;
   height: 390px;
   /* width: 100%;
